# scout

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  api-contracts.md  full-review.md  pyproject.toml  review.md  stop-serve
.cursor/skills/code-reviewer-scout/: SKILL.md
.cursor/skills/code-reviewer-scout/scripts/: review_api.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
.memory/: cards.md
journal/: 2026-06-12-api-contracts.md  2026-06-12-chunk-utf8-boundary-fix.md  2026-06-12-code-review-improvements.md  2026-06-12-embed-api-key-provider-fix.md  2026-06-12-explore-scout-api-config.md  2026-06-12-grill-scout-mvp1.md  2026-06-12-openspec-validation.md  2026-06-12-opsx-apply-distribution.md  2026-06-12-opsx-apply-scout-mvp1.md  2026-06-12-opsx-propose-scout-mvp1.md  2026-06-12-scout-build-script.md  2026-06-12-spaces-list-endpoint.md  2026-06-12-stop-serve.md  2026-06-12-unified-setup.md  2026-06-13-ai-code-reviewer-scout.md  2026-06-13-auto-embed-batch-probe.md  2026-06-13-comprehensive-readme.md  2026-06-13-embed-batch-cli-flag.md  2026-06-13-embed-connect-error.md  2026-06-13-pipx-scout-name-collision.md  2026-06-13-stale-wheel-utf8-panic.md
openspec/changes/ai-code-reviewer-scout/: design.md  proposal.md  tasks.md
openspec/changes/ai-code-reviewer-scout/specs/code-reviewer-skill/: spec.md
openspec/changes/scout-simple-mvp1/: design.md  proposal.md  tasks.md
openspec/changes/scout-simple-mvp1/specs/agent-skill/: spec.md
openspec/changes/scout-stop-serve/: design.md  proposal.md  tasks.md
openspec/changes/scout-unified-setup/: design.md  proposal.md  tasks.md
openspec/specs/cli-and-serve/: spec.md
openspec/specs/graph-function-tree/: spec.md
openspec/specs/graph-visualizer/: spec.md
openspec/specs/rest-api/: spec.md
packaging/: hawkeye.spec
scope/: scout-simple-mvp1.md
scout/: __init__.py  config.py  graph_find.py  indexing.py
scout/api/: README.md  app.py  auth.py  graph_file.py  middleware.py  path_safety.py  rate_limit.py
scout/cli/: errors.py  main.py
scout/code_reviewer/: README.md  __init__.py  __main__.py  install.py
scout/embed/: batch_probe.py  compress.py  registry.py
scout/hawkeye/: README.md  __init__.py  __main__.py  config.py  discovery.py  io_utils.py  setup_cmd.py
scout/hawkeye/backends/: __init__.py  base.py  filesystem.py  graph.py  resolve.py
scout/hawkeye/cli/: __init__.py  main.py
scout/hawkeye/findings/: __init__.py  sarif.py  schema.py
scout/hawkeye/hybrid/: __init__.py  escalate.py
scout/hawkeye/learning/: __init__.py  miner.py  promote.py
scout/hawkeye/rules/: __init__.py  antipatterns.py  engine.py  globs.py
scout/hawkeye/rules/pack_v1/: __init__.py  antipatterns.yaml  rules.yaml
scout/hawkeye/runner/: __init__.py  diff_scope.py  path_scope.py  playbook.py  replay.py
scout/hawkeye/trace/: __init__.py  client.py  store.py
scout/prescan/: runner.py
scout/security/: __init__.py  log_redact.py
scout/serve/: __init__.py  lifecycle.py
scout/session/: __init__.py  chunks.py  file_cache.py  graph_cache.py  queue.py  runtime.py  store.py  worker.py
scout/setup/: __init__.py  api_url.py  embed.py  prompts.py  runner.py  workspace.py
scout/skill/: README.md  install.py
scout/web/: __init__.py
scout/web/graph/: app.js  index.html  styles.css
scout_core/: Cargo.toml  README.md
scout_core/src/: bulk_read.rs  chunk.rs  error.rs  file_read.rs  graph.rs  index.rs  lib.rs  location_ref.rs  node_id.rs  path_prefix.rs  pyapi.rs  scan.rs  search.rs  staleness.rs  types.rs
scout_core/src/parse/: capture_map.rs  go.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
scripts/: build_hawkeye_binary.sh  hawkeye.sh  scout.sh  validate_openspec.py  verify_pipx_install.sh
skills/code-reviewer-scout/: README.md  SKILL.md
skills/search_scout/: README.md  SKILL.md
skills/search_scout/scripts/: scout_api.py
tests/: README.md  conftest.py  test_embed_auth.py  test_integration.py  test_setup.py  test_stop_serve.py
tests/api/: conftest.py  test_file_read.py  test_graph_visualizer.py  test_location_ref.py  test_neighbors.py  test_node_full_text.py  test_path_safety.py  test_search_no_index.py  test_security.py  test_session_embed.py  test_spaces_list.py  test_symbols.py
tests/cli/: test_api_url_discovery.py  test_embed_batch.py  test_embed_setup.py  test_graceful_errors.py  test_graph_only_reindex.py  test_graph_search.py  test_setup.py  test_stop_serve.py  test_workspace.py
tests/code_reviewer/: test_install.py  test_review_api.py  test_skill_template.py
tests/config/: test_https_defaults.py  test_validate_embed_https.py
tests/embed/: test_auth.py  test_batch_probe.py  test_compress.py
tests/hawkeye/: __init__.py  test_backends.py  test_cli.py  test_cli_entry.py  test_config.py  test_diff_scope.py  test_discovery.py  test_first_class_cli.py  test_hardening.py  test_path_scope.py  test_rules.py  test_sarif_integration.py  test_setup_security.py  test_trace_store.py
tests/integration/: test_config.py  test_gitignore_scan.py  test_indexing.py  test_prescan.py  test_skill.py
tests/openspec/: test_validate_openspec.py
tests/security/: test_log_redact.py
tests/session/: test_chunks.py  test_file_cache.py  test_queue.py  test_store.py
tests/skills/: test_scout_api.py
(+12 files in other folders)
