[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "scout"
version = "0.1.0"
description = "Local code-graph + vector search for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Scout Contributors" }]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.7,<2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
scout = "scout.cli.main:app"

[tool.maturin]
manifest-path = "scout_core/Cargo.toml"
module-name = "scout_core"
python-source = "scout"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
