[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "scout"
version = "0.1.1"
description = "Local code-graph + vector search and Hawkeye code review for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Scout Contributors" }]
keywords = ["code-search", "vector-search", "code-review", "agents", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "psutil>=6.1.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.7,<2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
scout = "scout.cli.main:main"
hawkeye = "scout.hawkeye.cli.main:main"

[project.urls]
Homepage = "https://github.com/tjax4376/scout"
Repository = "https://github.com/tjax4376/scout"
Documentation = "https://github.com/tjax4376/scout#readme"

[tool.maturin]
manifest-path = "scout_core/Cargo.toml"
module-name = "scout_core"
features = ["extension-module"]
python-packages = ["scout"]
# Stable ABI wheel (cp311-abi3): one wheel per platform for Python 3.11+
py-limited-api = true

[tool.setuptools.package-data]
scout = ["web/graph/**/*", "hawkeye/rules/pack_v1/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
