[package]
name = "scout_core"
version = "0.1.0"
edition = "2021"
description = "Scout v2 core engine: scan, parse, graph, vector search"
license = "MIT"

[lib]
name = "scout_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
blake3 = "1.5"
bincode = "1.3"
glob = "0.3"
petgraph = "0.7"
pyo3 = { version = "0.24", features = [] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite-vec = "0.1.9"
streaming-iterator = "0.1"
thiserror = "2.0"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
walkdir = "2.5"
zerocopy = { version = "0.8", features = ["derive"] }
