[package]
name = "scout_core"
version = "0.1.0"
edition = "2021"
description = "Scout v2 core engine: scan, parse, graph, vector search"
license = "MIT"

[lib]
name = "scout_core"
# cdylib: Python extension (.so/.dylib/.dll) via pyo3
# rlib: unit tests and internal Rust tooling
crate-type = ["cdylib", "rlib"]

[features]
default = []
# extension-module: build as importable Python module (not standalone binary)
# abi3-py311: stable ABI wheel — one wheel per platform for Python 3.11+
extension-module = ["pyo3/extension-module", "pyo3/abi3-py311"]

[dependencies]
blake3 = "1.5"              # content hashing for node IDs and staleness
bincode = "1.3"              # graph.bin serialization (petgraph snapshot)
glob = "0.3"                 # skip_globs matching during workspace scan
petgraph = "0.7"             # in-memory code graph (contains, imports, calls)
pyo3 = { version = "0.24", features = [] }  # Python bindings (pyapi.rs)
rusqlite = { version = "0.32", features = ["bundled"] }  # index.db metadata
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"           # pyo3 JSON boundary for scan/build/search
sqlite-vec = "0.1.9"         # vector similarity in index.db
streaming-iterator = "0.1"   # zero-copy rusqlite row iteration
thiserror = "2.0"            # typed errors across engine modules
tree-sitter = "0.24"         # AST parsing core
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
walkdir = "2.5"              # recursive workspace file walk
zerocopy = { version = "0.8", features = ["derive"] }  # sqlite-vec blob layout
